added a kookaburra page

--- a/rooster.html
+++ b/rooster.html
@@ -21,6 +21,9 @@
             <li>
                 <a href="rooster.html" class="current-page">most elusive bird</a>
             </li>
+            <li>
+                <a href="kookabura.html">kookabura</a>
+            </li>
         </ul>
     </nav>
     <main>
